2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Link against all Ipopt dependencies.
	* src/Makefile.am: Here.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Libtool support more robust, link against roboptim-core.
	* .gitignore: Remove committed files from ignore list.
	* build-aux/bootstrap: Remove force flag from autoreconf call.
	* build-aux/config.guess: New.
	* build-aux/config.sub: New.
	* build-aux/depcomp: New.
	* build-aux/install-sh: New.
	* build-aux/libtool.m4: New.
	* build-aux/ltmain.sh: New.
	* build-aux/ltoptions.m4: New.
	* build-aux/ltsugar.m4: New.
	* build-aux/ltversion.m4: New.
	* build-aux/lt~obsolete.m4: New.
	* build-aux/missing: New.
	* configure.ac: Remove unneeded macro.
	* src/Makefile.am: Link against roboptim-core.

2009-05-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute pkg.m4.
	* build-aux/pkg.m4: New.

2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Use new function interface.
	* src/Makefile.am: Link against lapack for now.
	* src/roboptim-core-ipopt-plugin.cc
	* tests/hs071.hh: Use new function interface.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-05-14  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle failures proplery.
	* src/roboptim-core-ipopt-plugin.cc: Here.

2009-05-14  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not search for a symbol when looking for gfortran.
	* build-aux/ipopt.m4: To avoid portability problem, do not
	search for a specific symbol.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix makeBound call.
	* tests/hs071.hh: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	* .gitignore,
	* AUTHORS,
	* COPYING,
	* ChangeLog,
	* Makefile.am,
	* NEWS,
	* README,
	* bootstrap,
	* build-aux/acx_pthread.m4,
	* build-aux/autotest.at,
	* build-aux/autotest.mk,
	* build-aux/bootstrap,
	* build-aux/init.mk,
	* build-aux/ipopt.m4,