@@ -15,6 +15,11 @@ EXTRA_DIST = bootstrap build-aux/bootstrap
 # Nothing to do in this directory.
 all:
 
+# Libtool rules
+LIBTOOL_DEPS = @LIBTOOL_DEPS@
+libtool: $(LIBTOOL_DEPS)
+	$(SHELL) ./config.status --recheck
+
 # -- Generate documentation
 .PHONY: doc html
 doc html:
