@@ -1,5 +1,10 @@
 2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Add Libtool rules.
+	* Makefile.am: Here.
+
+2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Link against all Ipopt dependencies.
 	* src/Makefile.am: Here.
 
